//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table block {
  hash String [pk, unique]
  number Int [unique, not null]
  nfts nfts_by_blocks [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table nft {
  id String [pk, unique]
  token_id String [not null]
  mint_time DateTime [not null]
  token_uri String [not null]
  nft_asset nft_asset [not null]
  blocks nfts_by_blocks [not null]
  contract_id String [not null]
  contract contract [not null]
  owner_id String [not null]
  owner owner [not null]
  imported erc721_import_by_nft [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table owner {
  id String [pk, unique]
  nfts nft [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table nfts_by_blocks {
  block block [not null]
  block_hash String [not null]
  token nft [not null]
  nft_id String [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]

  indexes {
    (block_hash, nft_id) [pk]
  }
}

Table nft_asset {
  token_uri String [pk, unique]
  referrers nft [not null]
  ipfs_URL String
  metadata metadata
  status nft_asset_status [not null]
  status_text String [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table metadata {
  content_cid String [pk, unique]
  token_uri String [unique, not null]
  nft_asset nft_asset [not null]
  name String [not null]
  description String [not null]
  image_uri String [not null]
  resources resources_by_metadata [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table resource {
  uri String [pk, unique]
  referrers resources_by_metadata [not null]
  status resource_status [not null]
  status_text String
  ipfs_url String [unique]
  content_cid String
  content content
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table resources_by_metadata {
  metadata_cid String [not null]
  metadata metadata [not null]
  resource_uri String [not null]
  resource resource [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]

  indexes {
    (metadata_cid, resource_uri) [pk]
  }
}

Table content {
  cid String [pk, unique]
  resources resource [not null]
  dag_size Int
  pins pin [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table pin {
  id BigInt [pk, increment, unique]
  content_cid String [not null]
  content content [not null]
  service pin_service [not null]
  status pin_status [not null]
  status_text String
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table contract {
  id String [pk, unique]
  name String
  symbol String
  supports_eip721_metadata Boolean [not null]
  nfts nft [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table erc721_import {
  id String [pk, unique]
  next_id String [not null]
  tokens erc721_import_by_nft [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]
}

Table erc721_import_by_nft {
  erc721_import erc721_import [not null]
  erc721_import_id String [not null]
  token nft [not null]
  nft_id String [not null]
  updated_at DateTime [default: `now()`, not null]
  inserted_at DateTime [default: `now()`, not null]

  indexes {
    (erc721_import_id, nft_id) [pk]
  }
}

Enum resource_status {
  Queued
  URIParseFailed
  ContentFetchFailed
  PinRequestFailed
  ContentLinked
}

Enum nft_asset_status {
  Queued
  URIParseFailed
  ContentFetchFailed
  ContentParseFailed
  PinRequestFailed
  Linked
}

Enum pin_status {
  ClusterError
  PinError
  PinQueued
  Pinned
  Pinning
  Remote
  Sharded
  Undefined
  UnpinError
  UnpinQueued
  Unpinned
  Unpinning
}

Enum pin_service {
  Pinata
  IpfsCluster
}

Ref: nft.token_uri > nft_asset.token_uri

Ref: nft.contract_id > contract.id

Ref: nft.owner_id > owner.id

Ref: nfts_by_blocks.block_hash > block.hash

Ref: nfts_by_blocks.nft_id > nft.id

Ref: metadata.token_uri - nft_asset.token_uri

Ref: resource.content_cid > content.cid

Ref: resources_by_metadata.metadata_cid > metadata.content_cid

Ref: resources_by_metadata.resource_uri > resource.uri

Ref: pin.content_cid > content.cid

Ref: erc721_import_by_nft.erc721_import_id > erc721_import.id

Ref: erc721_import_by_nft.nft_id > nft.id